# ADCPP

./: .gitignore  CMakeLists.txt  README.md  adcpp.md  apcpp.md
Exercise_01/: .text.txt.un~  L1.1_helloWorld.cpp  L1.1_txtConverter.cpp  L1.2_fraction.cpp  L1.4_revPolCalc.cpp  L1.5_inlinedFuncs.md  fraction.cpp  ollaa.txt  revPolCalc.cpp  simpleSpellChecker.cpp  text.txt~  txtConverter  txtConverter.cpp
Exercise_02/: fraction.cpp  fraction.h  pvector.cpp  pvector.h  revPolTemplate.cpp
Exercise_02/swap_comp/: ptr.s  ptr_swap.cpp  ref.s  ref_swap.cpp  result.txt
Exercise_03/: pvector.cpp  pvector.h
Exercise_03/SpellChecker/: dict.txt  main.cpp  simplespellchecker.cpp  simplespellchecker.h  text.txt
Exercise_03/connect4ai/: CMakeLists.txt  comp_player.h  connect4  florentin_ai.h  game.h  human_player.h  main.cpp  mischa_ai.h  playfield.cpp  playfield.h  playfield_traits.h
Exercise_03/connect4ai/.cmake/api/v1/reply/: index-2021-11-18T19-23-41-0407.json
Exercise_03/pVector/: main.cpp  persistance_traits.h  pset.h  pvector.h
Exercise_03/pointer_emulation/: dumb_pointer.h  main.cpp  smart_pointer.h
Exercise_03/revPolCalcComplex/: main.cpp  minmax_traits.h  rpn.h
Exercise_04/: CMakeLists.txt
Exercise_04/L4.2_findif/findif_cpp/: find  findOptimized  findif.h  main.cpp
Exercise_04/L4.2_findif/findif_java/findif/src/: Finder.java  Main.java
Exercise_04/L4.3_range/: CMakeLists.txt  main.cpp  range  range.h
Exercise_04/L4.4_containers/: CMakeLists.txt  L4.4_containers.cbp  main.cpp  merge  mergecont.h  mergecont_traits.h
Exercise_04/L4.4_containers/.cmake/api/v1/reply/: cache-v2-0725f0800a4ddbba3a88.json  codemodel-v2-202318ff72e76f93ec6d.json  index-2021-11-18T14-16-33-0740.json  target-merge-9b2bd995ad057e0deeb5.json
Exercise_04/L4.5_between/: CMakeLists.txt  between  between.h  main.cpp
Exercise_04/findif_java/findif/src/: Finder.java  Main.java  Matcher.java
Exercise_05/: CMakeLists.txt
Exercise_05/L5.1_merge/: CMakeLists.txt  main.cpp  mergeback  mergecont.h
Exercise_05/L5.2_regex/: CMakeLists.txt  main.cpp  regex  text.txt
Exercise_05/L5.3_shapes/: CMakeLists.txt  main.cpp  shapes
Exercise_05/L5.4_connect4inheritance/: CMakeLists.txt  connect4  human_player.h  main.cpp  playfield_traits.h
Exercise_05/L5.5_connect4factory/: CMakeLists.txt  comp_player.cpp  comp_player.h  connect4  human_player.cpp  main.cpp  my_playfield.cpp  my_playfield.h  player.h  player_factory.cpp  player_factory.h  playfield.h  playfield_traits.h
Exercise_05/L5.6_order/: CMakeLists.txt  main  main.cpp
Exercise_06/: hierarchy.txt
Exercise_06/L6.1_filelocker/: CMakeLists.txt  file_locker.cpp  file_locker.h  integers.txt  locker  main.cpp  persistance_traits.h  pvector.h
Exercise_06/L6.2_metaprogramming/: CMakeLists.txt  main.cpp  meta
